syntax = "proto3";

package coolstore.inventory.v1;

option csharp_namespace = "CoolStore.Protobuf.Inventory.V1";

import "google/protobuf/wrappers.proto";

message StoreDto {
  string id = 1;
  string location = 2;
  google.protobuf.StringValue description = 3;
  string website = 4;
}

message StoreProductPriceDto {
  string id = 1;
  string store_id = 2;
  string product_id = 3;
  double price = 4;
  int32 rop = 5;
  int32 eoq = 6;
}
