syntax = "proto3";

package coolstore.inventory.v1;

option csharp_namespace = "CoolStore.Protobuf.Inventory.V1";

import "inventory.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service InventoryApi {
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty) {};
  rpc GetStores(GetStoresRequest) returns (GetStoresResponse) {};
  rpc GetStoresByIds(GetStoresByIdsRequest) returns (GetStoresByIdsResponse) {};
}

message GetStoresRequest {}

message GetStoresResponse {
  repeated StoreDto stores = 1;
}

message GetStoresByIdsRequest {
  repeated string ids = 1;
}
message GetStoresByIdsResponse {
  repeated StoreDto stores = 1;
}
